# Omni_instrument_assesment

./: .gitignore  README.md
docker/: Dockerfile.base  Dockerfile.python  Dockerfile.ros
docker/entrypoint/: entrypoint.sh
ros2_ws/src/neural_depth/: package.xml  setup.cfg  setup.py  setup_hitnet_onnx.sh  setup_raft_stereo.sh
ros2_ws/src/neural_depth/neural_depth/: __init__.py  hitnet_node.py  neural_depth_node.py
ros2_ws/src/stereo_depth/: package.xml  setup.cfg  setup.py
ros2_ws/src/stereo_depth/stereo_depth/: __init__.py  stereo_depth_node.py
ros2_ws/src/tsdf_saver/config/: tsdf.rviz
ros2_ws/src/tsdf_saver/launch/: saver.launch.py
scripts/: start_cuda.sh
