<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>neural_depth</name>
  <version>0.1.0</version>
  <description>Neural stereo depth estimation using RAFT-Stereo (PyTorch + CUDA)</description>
  <maintainer email="anirudh@todo.todo">anirudh</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>message_filters</depend>
  <exec_depend>python3-onnxruntime-gpu</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
